# Acuvio

./: .gitignore  Acuvio.desktop  LICENSE  Prompt.md  README.md  angular.json  package-lock.json  package.json  run.cmd  run.command  run.sh  tsconfig.json
docs/: DEVELOPMENT.md  MANUAL_TESTING.md  UPDATING.md  notepad-plus-plus-features.md
docs/copilot/: copilot-session.jsonl
docs/features/: 01-view-preferences.md  02-editable-document-model.md  03-syntax-highlighting.md  04-edit-operations.md  05-find-replace.md  06-advanced-line-operations.md  07-view-rendering-options.md  08-bookmarks.md  09-mark.md  10-brace-matching.md  11-bookmark-line-operations.md  12-mark-styles.md  13-find-dialog.md  14-large-file-open-performance.md  README.md
scripts/: build-installer.mjs  copy-session.cmd  copy-session.mjs  copy-session.sh  generate-icon.mjs  generate-sample-log.mjs  generate-test-fixtures.mjs  install-linux-launcher.sh  run.mjs  update-deps.mjs  update.cmd  update.ps1  update.sh
src/: index.html  styles.scss
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  indexer.rs  lib.rs  log_file.rs  main.rs  search.rs  state.rs  tailer.rs  text_file.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  models.ts
src/app/components/dropdown-menu/: dropdown-menu.component.ts
src/app/components/filter-panel/: filter-panel.component.ts
src/app/components/find-dialog/: find-dialog.component.ts
src/app/components/log-viewer/: log-highlight.ts  log-viewer.component.ts  search-highlight.ts
src/app/components/replace-panel/: replace-panel.component.ts
src/app/components/search-panel/: search-panel.component.ts
src/app/components/status-bar/: status-bar.component.ts
src/app/components/text-editor/: text-editor.component.ts
src/app/editor/: bookmarks.spec.ts  bookmarks.ts  brace-match.spec.ts  brace-match.ts  edit-commands.spec.ts  edit-commands.ts  find-engine.spec.ts  find-engine.ts  mark.spec.ts  mark.ts
src/app/services/: editor.service.ts  language-registry.service.ts  log.service.ts  search.service.ts  settings.service.ts  tail.service.ts
test-fixtures/: edit-ops.txt  eol-cr.txt  numbers.txt  sample.json  sample.md  sample.py  sample.rs  sample.sql  sample.ts
(+1 files in other folders)
