[package]
name = "acuvio"
version = "0.1.0"
description = "Acuvio — a high-performance log analyzer for multi-gigabyte log files with live tailing."
authors = ["Acuvio"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "acuvio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# GB-scale file handling
memmap2 = "0.9"
notify = "6"

# ripgrep search engine
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
