[package]
name = "acuvio"
version = "0.1.0"
description = "Acuvio — a high-performance log analyzer for multi-gigabyte log files with live tailing."
authors = ["Acuvio"]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[lib]
name = "acuvio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# GB-scale file handling
memmap2 = "0.9"
notify = "8"
# SIMD-accelerated newline scanning for fast indexing of multi-GB files.
memchr = "2"

# ripgrep search engine
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Optimize third-party crates (memchr, memmap2, grep-*) even in debug/dev builds
# so large-file indexing and search stay fast when running `npm run dev`, while
# the app crate itself stays unoptimized for quick incremental rebuilds.
[profile.dev.package."*"]
opt-level = 3
